--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals">
     <meta name="author" content="Dieketseng Judith Motsetse">
-    <title>WDD 131 - Dynamic Web Fundamentals - Your Name</title>
+    <title>"WDD 131 - Dynamic Web Fundamentals - Dieketseng Motsetse"</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:wght@100;400;500;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <h1>Welcome to My Homepage</h1>
+        <h1>WDD 131 - Dynamic Web Fundametals - Dieketseng Judith Motsetse</h1>
         <nav>
             <a href="https://www.linkedin.com/in/dieketsengmotsetse">LinkedIn</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
