--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             
             <!-- Anchor links for each project -->
             <div class="project-links">
-                <a href="#project1">Project 1</a> |
+                <a href="#temples.html">Temples Album</a> |
                 <a href="#project2">Project 2</a> |
                 <a href="#project3">Project 3</a>
             </div>
