week 03 done and Dusted!

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- Anchor links for each project -->
             <div class="project-links">
                 <a href="temples.html">Temple Album</a> |
-                <a href="#project2">Project 2</a> |
+                <a href="place.html">Country page</a> |
                 <a href="#project3">Project 3</a>
             </div>
         </section>
