--- a/place.html
+++ b/place.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>South Africa</title>
+  <meta name="description" content="Explore the beauty, culture, and facts about South Africa. Learn about its geography, weather, and more.">
+  <meta name="author" content="Dieketseng J Motsetse">
+  <title>Discover South Africa: Geography, Culture & Weather</title>
   <link rel="stylesheet" href="styles/place.css">
   <script src="scripts/place.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>South Africa</h1>
+    <h1>South Africa: A Land of Diversity</h1>
   </header>
 
   <main>
@@ -61,6 +63,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
