--- a/place.html
+++ b/place.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Explore the beauty, culture, and facts about South Africa. Learn about its geography, weather, and more.">
   <meta name="author" content="Dieketseng J Motsetse">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <title>Discover South Africa: Geography, Culture & Weather</title>
   <link rel="stylesheet" href="styles/place.css">
   <script src="scripts/place.js" defer></script>
@@ -44,7 +45,8 @@
 
       <section class="weather">
         <header>
-          <h2>Weather <span class="icon">☀️</span></h2>
+            <h2> <span class="icon"><img src="images/icon.svg" alt="Custom Icon"></span></h2>
+          
         </header>
         <ul>
           <li><strong>Temperature:</strong> <span id="temperature">20 °C</span></li>
