--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             
             <!-- Anchor links for each project -->
             <div class="project-links">
-                <a href="temples.html">Temple Album</a> |
+                <a href="filtered-temples.html">Temple Album</a> |
                 <a href="place.html">Country page</a> |
                 <a href="#project3">Project 3</a>
             </div>
