--- a/place.html
+++ b/place.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Dieketseng J Motsetse">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <title>Discover South Africa: Geography, Culture & Weather</title>
   <link rel="stylesheet" href="styles/place.css">
   <script src="scripts/place.js" defer></script>
@@ -20,14 +20,14 @@
   <main>
     <!-- Hero Section -->
     <section class="hero">
-      <h2>Welcome to South Africa</h2> <!-- Added heading -->
+      <h2>Welcome to South Africa</h2>
       <picture>
         <source srcset="images/south-africa-large.webp" media="(min-width: 768px)">
         <img src="images/south-africa-small.webp" alt="Beautiful landscape of South Africa" class="hero-image">
       </picture>
     </section>
 
-    <!-- Data and Weather Sections with Headers -->
+    <!-- Data and Weather Sections -->
     <div class="info-container">
       <section class="data">
         <header>
@@ -47,26 +47,31 @@
 
       <section class="weather">
         <header>
-            <h2> <span class="icon"><img src="images/icon.svg" alt="Custom Icon"></span></h2>
-          
+          <h2>Weather</h2>
         </header>
-        <ul>
-          <li><strong>Temperature:</strong> <span id="temperature">20 °C</span></li>
-          <li><strong>Conditions:</strong> Sunny</li>
-          <li><strong>Wind:</strong> <span id="windSpeed">10 km/h</span></li>
-          <li><strong>Wind Chill:</strong> <span id="windChill">N/A</span></li>
-        </ul>
+        <div class="weather-info">
+          <svg class="weather-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" role="img" aria-label="Partly Cloudy Weather Icon">
+            <circle cx="32" cy="32" r="12" fill="#f9a825" />
+            <circle cx="45" cy="45" r="15" fill="#cfcfcf" />
+          </svg>
+          <ul>
+            <li><strong>Temperature:</strong> <span id="temperature">20 °C</span></li>
+            <li><strong>Conditions:</strong> Sunny</li>
+            <li><strong>Wind:</strong> <span id="windSpeed">10 km/h</span></li>
+            <li><strong>Wind Chill:</strong> <span id="windChill">1.1 °C</span></li>
+          </ul>
+        </div>
       </section>
     </div>
   </main>
 
-  <!-- Footer Section -->
   <footer>
     <p>©2024 🌸 Dieketseng J Motsetse 🌸 South Africa</p>
     <p>Last Modification: <span id="lastModified"></span></p>
   </footer>
 </body>
 </html>
+
 
 
 
