--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -15,11 +15,11 @@
         <nav>
             <button id="hamburger" aria-label="Toggle navigation menu">☰</button>
             <ul id="nav-menu" class="hidden" aria-hidden="true">
-                <li><button data-filter="home">Home</button></li>
-                <li><button data-filter="old">Old</button></li>
-                <li><button data-filter="new">New</button></li>
-                <li><button data-filter="large">Large</button></li>
-                <li><button data-filter="small">Small</button></li>
+                <li><a href="#" data-filter="home">Home</a></li> <!-- Changed to <a> tags -->
+                <li><a href="#" data-filter="old">Old</a></li>
+                <li><a href="#" data-filter="new">New</a></li>
+                <li><a href="#" data-filter="large">Large</a></li>
+                <li><a href="#" data-filter="small">Small</a></li>
             </ul>
         </nav>
     </header>
@@ -35,6 +35,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
