Final Project Done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="https://www.linkedin.com/in/dieketsengmotsetse" target="_blank">LinkedIn</a> |
             <a href="https://www.byui.edu/ilearn" target="https://my.byui.edu/external/login?redirectTo=%2Fdashboard">I-Learn</a> |
             <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/8?lang=eng&id=p11#p11" target="_blank">Scripture</a> |
-            <a href="project/siteplan.html">Final Project</a>
+            <a href="project/index.html">Final Project</a>
         </nav>
     </header>
     <main>
